--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "build": "tsc",
+    "run": "tsc && node dist/index.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^10.12.12",
     "axios": "^0.18.0",
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
