--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
+    "lib": [
+      "es5"
+    ],
     "outDir": "dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": true
   },
   "files": [
     "./node_modules/@types/node/index.d.ts"
